// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`IconButton disables the button when the disabled prop is true: IconButton Disabled 1`] = `
<body>
  <div>
    <button
      class="icon-button  "
      disabled=""
    >
      <svg
        fill="currentColor"
        id="Plus"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <polygon
          points="23 11 23 13 13 13 13 23 11 23 11 13 1 13 1 11 11 11 11 1 13 1 13 11 23 11"
        />
      </svg>
    </button>
  </div>
</body>
`;

exports[`IconButton renders IconButton component: IconButton 1`] = `
<body>
  <div>
    <button
      class="icon-button  "
    >
      <svg
        fill="currentColor"
        id="Plus"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <polygon
          points="23 11 23 13 13 13 13 23 11 23 11 13 1 13 1 11 11 11 11 1 13 1 13 11 23 11"
        />
      </svg>
    </button>
  </div>
</body>
`;

exports[`IconButton renders the correct size class based on the size prop: IconButton Large 1`] = `
<body>
  <div>
    <button
      class="icon-button large "
    >
      <svg
        fill="currentColor"
        id="Plus"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <polygon
          points="23 11 23 13 13 13 13 23 11 23 11 13 1 13 1 11 11 11 11 1 13 1 13 11 23 11"
        />
      </svg>
    </button>
  </div>
</body>
`;
